[package]
name = "compose-updater"
version = "0.1.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
glob = "0.3.0"
log = "0.4.11"
env_logger = "0.7.1"
